--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             margin: 0 auto;
         }
 
+        p {
+            text-align: center;
+        }
+
     </style>
 </head>
 <body>
